[FIX] Remove scroll in mobile. All elements are visible in viewport

--- a/src/app/components/About/styles.module.scss
+++ b/src/app/components/About/styles.module.scss
@@ -29,5 +29,6 @@
 
   @media (max-width: 576px) {
     margin: var(--safe-zone-x);
+    min-height: 12rem;
   }
 }
