--- a/src/modules/upload/components/FileInput/styles.module.scss
+++ b/src/modules/upload/components/FileInput/styles.module.scss
@@ -22,11 +22,19 @@
     transform: translateX(-50%);
     font-weight: 100;
     font-size: 0.9rem;
+
+    @media (max-width: 768px) {
+      font-size: 0.8rem;
+    }
   }
 
   img {
     object-fit: contain;
     width: 18rem;
+
+    @media (max-width: 768px) {
+      width: 12rem;
+    }
   }
 
   &:hover {
@@ -47,6 +55,11 @@
     top: -10%;
     right: 20%;
 
+    @media (max-width: 768px) {
+      width: 3rem;
+      height: 3rem;
+    }
+
     &[data-status='true'] {
       background: var(--color-error);
 
@@ -65,6 +78,12 @@
       transition: all 250ms cubic-bezier(0, 1.5, 1, 1.5);
       object-fit: contain;
       z-index: 1;
+
+      @media (max-width: 768px) {
+        width: 1.25rem;
+        height: 1.25rem;
+        right: 1.5rem;
+      }
     }
   }
 }
